[STREAMPIPES-402] Separate data configuration from visualization config

--- a/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
@@ -26,7 +26,9 @@
         </div>
     </div>
     <div fxFlex="100" fxLayout="column" class="designer-panel-content" *ngIf="currentlyConfiguredWidget">
-        <h4 *ngIf="currentlyConfiguredWidget">{{ currentlyConfiguredWidget.baseAppearanceConfig.widgetTitle }}</h4>
+        <div class="designer-panel-title">
+            <h4 *ngIf="currentlyConfiguredWidget">{{ currentlyConfiguredWidget.baseAppearanceConfig.widgetTitle }}</h4>
+        </div>
         <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectOptionsPanel($event)" color="accent"
                        class="small">
             <mat-tab label="Data"></mat-tab>
@@ -35,56 +37,82 @@
         </mat-tab-group>
 
         <div fxFlex="100" fxLayout="column">
-            <div fxFlex="100" fxLayout="column" class="designer-panel-config">
+            <div fxFlex fxLayout="column" class="designer-panel-config">
 
                 <div *ngIf="selectedIndex == 0">
                     <sp-data-explorer-widget-data-settings [(dataLakeMeasure)]="dataLakeMeasure"
-                                                           [currentlyConfiguredWidget]="currentlyConfiguredWidget"
+                                                           [dataConfig]="currentlyConfiguredWidget.dataConfig"
                                                            [newWidgetMode]="newWidgetMode"
                                                            (createWidgetEmitter)="createNewWidget($event)">
 
                     </sp-data-explorer-widget-data-settings>
                 </div>
-                <div *ngIf="selectedIndex == 1">
-                    <div *ngIf="currentlyConfiguredWidget.widgetType === 'table'" class="h-100 p-0">
-                        <sp-data-explorer-table-widget-config [currentlyConfiguredWidget]="currentlyConfiguredWidget"
-                                                              [dataLakeMeasure]="dataLakeMeasure">
+                <div *ngIf="selectedIndex == 1" class="p-5">
+                    <div fxFlex="100" fxLayout="column">
+                        <div fxFlex="100" fxLayout="column" class="data-explorer-options-panel">
+                            <span class="data-explorer-header">Visualization Type</span>
+                            <mat-form-field color="accent" fxFlex="100">
+                                <mat-label>Select visualization</mat-label>
+                                <mat-select [(value)]="currentlyConfiguredWidget.widgetType">
+                                    <mat-option [value]="'density-chart'">
+                                        <span class="pipeline-name">Density</span>
+                                    </mat-option>
+                                    <mat-option [value]="'histogram-chart'">
+                                        <span class="pipeline-name">Histogram</span>
+                                    </mat-option>
+                                    <mat-option [value]="'indicator-chart'">
+                                        <span class="pipeline-name">Indicator</span>
+                                    </mat-option>
+                                    <mat-option [value]="'line-chart'">
+                                        <span class="pipeline-name">Line Chart</span>
+                                    </mat-option>
+                                    <mat-option [value]="'pie-chart'">
+                                        <span class="pipeline-name">Pie Chart</span>
+                                    </mat-option>
+                                    <mat-option [value]="'table'">
+                                        <span class="pipeline-name">Table</span>
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        <div fxFlex="100" fxLayout="column" class="data-explorer-options-panel">
+                            <span class="data-explorer-header">Configuration</span>
+                            <div *ngIf="currentlyConfiguredWidget.widgetType === 'table'" class="h-100 p-0">
+                                <sp-data-explorer-table-widget-config
+                                        [currentlyConfiguredWidget]="currentlyConfiguredWidget">
 
-                        </sp-data-explorer-table-widget-config>
-                    </div>
-                    <div *ngIf="currentlyConfiguredWidget.widgetType === 'line-chart'" class="h-100 p-0">
-                        <sp-data-explorer-line-chart-widget-config
-                                [currentlyConfiguredWidget]="currentlyConfiguredWidget"
-                                [dataLakeMeasure]="dataLakeMeasure">
+                                </sp-data-explorer-table-widget-config>
+                            </div>
+                            <div *ngIf="currentlyConfiguredWidget.widgetType === 'line-chart'" class="h-100 p-0">
+                                <sp-data-explorer-line-chart-widget-config
+                                        [currentlyConfiguredWidget]="currentlyConfiguredWidget">
 
-                        </sp-data-explorer-line-chart-widget-config>
-                    </div>
-                    <div *ngIf="currentlyConfiguredWidget.widgetType === 'histogram-chart'" class="h-100 p-0">
-                        <sp-data-explorer-histogram-chart-widget-config
-                                [currentlyConfiguredWidget]="currentlyConfiguredWidget"
-                                [dataLakeMeasure]="dataLakeMeasure">
-                        </sp-data-explorer-histogram-chart-widget-config>
-                    </div>
-                    <div *ngIf="currentlyConfiguredWidget.widgetType === 'indicator-chart'" class="h-100 p-0">
-                        <sp-data-explorer-indicator-chart-widget-config
-                                [currentlyConfiguredWidget]="currentlyConfiguredWidget"
-                                [dataLakeMeasure]="dataLakeMeasure">
-                        </sp-data-explorer-indicator-chart-widget-config>
-                    </div>
-                    <div *ngIf="currentlyConfiguredWidget.widgetType === 'density-chart'" class="h-100 p-0">
-                        <sp-data-explorer-density-chart-widget-config
-                                [currentlyConfiguredWidget]="currentlyConfiguredWidget"
-                                [dataLakeMeasure]="dataLakeMeasure">
-                        </sp-data-explorer-density-chart-widget-config>
-                    </div>
-                    <div *ngIf="currentlyConfiguredWidget.widgetType === 'pie-chart'" class="h-100 p-0">
-                        <sp-data-explorer-pie-chart-widget-config
-                                [currentlyConfiguredWidget]="currentlyConfiguredWidget"
-                                [dataLakeMeasure]="dataLakeMeasure">
-                        </sp-data-explorer-pie-chart-widget-config>
+                                </sp-data-explorer-line-chart-widget-config>
+                            </div>
+                            <div *ngIf="currentlyConfiguredWidget.widgetType === 'histogram-chart'" class="h-100 p-0">
+                                <sp-data-explorer-histogram-chart-widget-config
+                                        [currentlyConfiguredWidget]="currentlyConfiguredWidget">
+                                </sp-data-explorer-histogram-chart-widget-config>
+                            </div>
+                            <div *ngIf="currentlyConfiguredWidget.widgetType === 'indicator-chart'" class="h-100 p-0">
+                                <sp-data-explorer-indicator-chart-widget-config
+                                        [currentlyConfiguredWidget]="currentlyConfiguredWidget">
+                                </sp-data-explorer-indicator-chart-widget-config>
+                            </div>
+                            <div *ngIf="currentlyConfiguredWidget.widgetType === 'density-chart'" class="h-100 p-0">
+                                <sp-data-explorer-density-chart-widget-config
+                                        [currentlyConfiguredWidget]="currentlyConfiguredWidget">
+                                </sp-data-explorer-density-chart-widget-config>
+                            </div>
+                            <div *ngIf="currentlyConfiguredWidget.widgetType === 'pie-chart'" class="h-100 p-0">
+                                <sp-data-explorer-pie-chart-widget-config
+                                        [currentlyConfiguredWidget]="currentlyConfiguredWidget">
+                                </sp-data-explorer-pie-chart-widget-config>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div *ngIf="selectedIndex == 2">
+                <div *ngIf="selectedIndex == 2" class="p-5">
                     <sp-data-explorer-widget-appearance-settings
                             [widgetId]="currentlyConfiguredWidget._id"
                             [baseAppearanceConfig]="currentlyConfiguredWidget.baseAppearanceConfig">
@@ -93,7 +121,8 @@
                 </div>
             </div>
             <mat-divider *ngIf="newWidgetMode"></mat-divider>
-            <div fxFlex fxLayout="row" fxLayoutAlign="center end" class="mt-10 actions-align-right" *ngIf="newWidgetMode">
+            <div fxLayout="row" fxLayoutAlign="center end" class="mt-10 actions-align-right p-15"
+                 *ngIf="newWidgetMode">
                 <button mat-button mat-raised-button color="accent" *ngIf="newWidgetMode && selectedIndex == 0"
                         (click)="selectedIndex = 1">
                     Next
