--- a/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.scss
+++ b/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.scss
@@ -19,11 +19,12 @@
 @import '../../../../scss/sp/sp-dialog.scss';
 
 .designer-panel-content {
-  padding: 10px;
+  padding: 0;
+  overflow-y: auto;
 }
 
 .designer-panel-config {
-  padding: 10px;
+  padding: 0;
 }
 
 .designer-panel-title {
