--- a/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.scss
+++ b/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.scss
@@ -25,11 +25,47 @@
 }
 
 .selection-radio-group {
-    display: flex;
-    flex-direction: column;
-    margin: 15px 0;
+  display: flex;
+  flex-direction: row;
+  margin: 5px 0;
 }
 
 .selection-radio-button {
   margin: 5px;
 }
+
+.mat-accordion .mat-expansion-panel-header.expansion-panel-header {
+  background-color: var(--color-bg-2);
+  padding-left: 15px;
+  padding-right: 5px;
+  height: 40px;
+}
+
+.mat-accordion .mat-expansion-panel-header.mat-expanded.expansion-panel-header {
+  height: 40px;
+  margin: 0;
+}
+
+.mat-accordion .mat-expansion-panel:last-of-type.expansion-panel {
+  border-radius: 0;
+  margin: 0;
+}
+
+.data-source-selection-panel .mat-expansion-panel-header-title,
+.data-source-selection-panel .mat-expansion-panel-header-description {
+  flex-basis: 0;
+}
+
+.data-source-selection-panel .mat-expansion-panel-header-description {
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.data-source-selection-panel .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
+
+.small-form {
+  margin-bottom: -1.25em;
+}
+
