--- a/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
+++ b/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
@@ -25,9 +25,9 @@
                     <i class="material-icons">add</i>
                     <span>New Data View</span>
                 </button>
-                <button mat-button mat-raised-button color="accent" (click)="openEditLabelView()">
-                    Edit Labels
-                </button>
+<!--                <button mat-button mat-raised-button color="accent" (click)="openEditLabelView()">-->
+<!--                    Edit Labels-->
+<!--                </button>-->
             </div>
         </div>
     </div>
