--- a/ui/src/app/data-explorer/components/designer-panel/appearance-settings/data-explorer-widget-appearance-settings.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/appearance-settings/data-explorer-widget-appearance-settings.component.html
@@ -17,40 +17,44 @@
   -->
 
 <div fxFlex="100" fxLayout="column">
-    <h4>Widget Title</h4>
-    <div fxFlex="100" fxLayout="row">
-        <mat-form-field color="accent" fxFlex="100">
-            <mat-label>Widget Title</mat-label>
-            <input matInput
-                   [(ngModel)]="baseAppearanceConfig.widgetTitle"/>
-        </mat-form-field>
+    <div fxFlex="100" fxLayout="column" class="data-explorer-options-panel">
+        <span class="data-explorer-header">Widget Title</span>
+        <div fxFlex="100" fxLayout="row">
+            <mat-form-field color="accent" fxFlex="100">
+                <mat-label>Widget Title</mat-label>
+                <input matInput
+                       [(ngModel)]="baseAppearanceConfig.widgetTitle"/>
+            </mat-form-field>
+        </div>
     </div>
 
-    <h4>Color Settings</h4>
-    <div fxFlex="100" fxLayout="row">
-        <mat-form-field color="accent" fxFlex="100">
-            <mat-label>Background Color</mat-label>
-            <input matInput
-                   [(colorPicker)]="baseAppearanceConfig.backgroundColor"
-                   [cpPosition]="'bottom'"
-                   [style.background]="baseAppearanceConfig.backgroundColor" required
-                   [cpPresetColors] = "presetColors"
-                   (colorPickerSelect)="triggerViewUpdate()"
-                   autocomplete="off"/>
-        </mat-form-field>
-    </div>
+    <div fxFlex="100" fxLayout="column" class="data-explorer-options-panel">
+        <span class="data-explorer-header">Color</span>
+        <div fxFlex="100" fxLayout="row">
+            <mat-form-field color="accent" fxFlex="100">
+                <mat-label>Background Color</mat-label>
+                <input matInput
+                       [(colorPicker)]="baseAppearanceConfig.backgroundColor"
+                       [cpPosition]="'bottom'"
+                       [style.background]="baseAppearanceConfig.backgroundColor" required
+                       [cpPresetColors]="presetColors"
+                       (colorPickerSelect)="triggerViewUpdate()"
+                       autocomplete="off"/>
+            </mat-form-field>
+        </div>
 
-    <div fxFlex="100" fxLayout="row">
-        <mat-form-field color="accent" fxFlex="100">
-            <mat-label>Text Color</mat-label>
-            <input matInput
-                   [(colorPicker)]="baseAppearanceConfig.textColor"
-                   [cpPosition]="'bottom'"
-                   [style.background]="baseAppearanceConfig.textColor"
-                   required
-                   [cpPresetColors] = "presetColors"
-                   (colorPickerSelect)="triggerViewUpdate()"
-                   autocomplete="off"/>
-        </mat-form-field>
+        <div fxFlex="100" fxLayout="row">
+            <mat-form-field color="accent" fxFlex="100">
+                <mat-label>Text Color</mat-label>
+                <input matInput
+                       [(colorPicker)]="baseAppearanceConfig.textColor"
+                       [cpPosition]="'bottom'"
+                       [style.background]="baseAppearanceConfig.textColor"
+                       required
+                       [cpPresetColors]="presetColors"
+                       (colorPickerSelect)="triggerViewUpdate()"
+                       autocomplete="off"/>
+            </mat-form-field>
+        </div>
     </div>
 </div>
