--- a/ui/src/app/data-explorer/components/widgets/indicator/config/indicator-chart-widget-config.component.html
+++ b/ui/src/app/data-explorer/components/widgets/indicator/config/indicator-chart-widget-config.component.html
@@ -18,57 +18,18 @@
 
 <div fxFlex="100" fxLayout="column">
     <h5>Indicator Field</h5>
-    <mat-form-field color="accent" fxFlex="100">
-        <mat-label>Select Field</mat-label>
-        <mat-select [(value)]="currentlyConfiguredWidget.dataConfig.selectedProperty" (selectionChange)="setSelectedProperties($event)">
-            <mat-option [value]="property.runtimeName" *ngFor="let property of currentlyConfiguredWidget.dataConfig.availableProperties">
-                <span class="pipeline-name">{{ property.runtimeName }}</span>
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
+    <sp-select-property [availableProperties]="fieldProvider.numericFields"
+                        [selectedProperty]="currentlyConfiguredWidget.visualizationConfig.valueField"
+                        (changeSelectedProperty)="updateValue($event)">
+    </sp-select-property>
 
-    <mat-form-field color="accent" fxFlex="100">
-        <mat-label>Value Aggregation</mat-label>
-        <mat-select [(value)]="currentlyConfiguredWidget.dataConfig.numberAggregation" (selectionChange)="triggerDataRefresh()">
-            <mat-option [value]="'MEAN'">
-                <span class="pipeline-name">Mean</span>
-            </mat-option>
-            <mat-option [value]="'FIRST'">
-                <span class="pipeline-name">First</span>
-            </mat-option>
-            <mat-option [value]="'LAST'">
-                <span class="pipeline-name">Last</span>
-            </mat-option>
-            <mat-option [value]="'MIN'">
-                <span class="pipeline-name">Min</span>
-            </mat-option>
-            <mat-option [value]="'MAX'">
-                <span class="pipeline-name">Max</span>
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
+    <mat-checkbox [(ngModel)]="currentlyConfiguredWidget.visualizationConfig.showDelta">Show delta indicator
+    </mat-checkbox>
 
-    <mat-checkbox [(ngModel)]="currentlyConfiguredWidget.dataConfig.showDelta">Show delta indicator</mat-checkbox>
-
-    <mat-form-field color="accent" fxFlex="100" *ngIf="currentlyConfiguredWidget.dataConfig.showDelta">
-        <mat-label>Delta Aggregation</mat-label>
-        <mat-select [(value)]="currentlyConfiguredWidget.dataConfig.deltaAggregation" (selectionChange)="triggerDataRefresh()">
-            <mat-option [value]="'MEAN'">
-                <span class="pipeline-name">Mean</span>
-            </mat-option>
-            <mat-option [value]="'FIRST'">
-                <span class="pipeline-name">First</span>
-            </mat-option>
-            <mat-option [value]="'LAST'">
-                <span class="pipeline-name">Last</span>
-            </mat-option>
-            <mat-option [value]="'MIN'">
-                <span class="pipeline-name">Min</span>
-            </mat-option>
-            <mat-option [value]="'MAX'">
-                <span class="pipeline-name">Max</span>
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
+    <h5 *ngIf="currentlyConfiguredWidget.visualizationConfig.showDelta">Delta Field</h5>
+    <sp-select-property [availableProperties]="fieldProvider.numericFields"
+                        [selectedProperty]="currentlyConfiguredWidget.visualizationConfig.deltaField"
+                        (changeSelectedProperty)="updateDelta($event)">
+    </sp-select-property>
 </div>
 
