--- a/ui/src/app/data-explorer/components/widgets/pie/config/pie-chart-widget-config.component.html
+++ b/ui/src/app/data-explorer/components/widgets/pie/config/pie-chart-widget-config.component.html
@@ -17,58 +17,12 @@
   -->
 
 <div fxFlex="100" fxLayout="column">
-    <h5>Indicator Field</h5>
-    <mat-form-field color="accent" fxFlex="100">
-        <mat-label>Select Field</mat-label>
-        <mat-select [(value)]="currentlyConfiguredWidget.dataConfig.selectedProperty"
-                    (selectionChange)="setSelectedProperties($event)">
-            <mat-option [value]="property.runtimeName"
-                        *ngFor="let property of currentlyConfiguredWidget.dataConfig.availableProperties">
-                <span class="pipeline-name">{{ property.runtimeName }}</span>
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
+    <h5>Field</h5>
+    <sp-select-property [availableProperties]="fieldProvider.nonNumericFields"
+                        [selectedProperty]="currentlyConfiguredWidget.visualizationConfig.selectedProperty"
+                        (changeSelectedProperty)="setSelectedProperty($event)">
+    </sp-select-property>
 
-    <h5>Filter</h5>
-    <div>
-        <button mat-button mat-raised-button color="accent" class="small-button"
-                (click)="addFilter()"
-                style="margin-right:10px;margin-bottom: 15px;">Add Filter
-        </button>
-    </div>
-    <div *ngFor="let filter of currentlyConfiguredWidget.dataConfig.selectedFilters" fxFlex="100" fxLayout="column">
-        <div fxFlex="100" fxLayout="column">
-            <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
-                <mat-form-field color="accent" class="w-50-px mr-15">
-                    <mat-label>Operator</mat-label>
-                    <mat-select [(value)]="filter.operator">
-                        <mat-option [value]="'='">
-                            <span class="pipeline-name">=</span>
-                        </mat-option>
-                        <mat-option [value]="'<'">
-                            <span class="pipeline-name"><</span>
-                        </mat-option>
-                        <mat-option [value]="'<='">
-                            <span class="pipeline-name"><=</span>
-                        </mat-option>
-                        <mat-option [value]="'>='">
-                            <span class="pipeline-name">>=</span>
-                        </mat-option>
-                        <mat-option [value]="'>'">
-                            <span class="pipeline-name">></span>
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field color="accent" class="mr-15">
-                    <mat-label>Condition</mat-label>
-                    <input matInput [(ngModel)]="filter.condition" (ngModelChange)="triggerDataRefresh()">
-                </mat-form-field>
-                <button mat-icon-button color="accent"
-                        (click)="remove(filter.index)">
-                    <i class="material-icons">remove</i>
-                </button>
-            </div>
-        </div>
-    </div>
+
 </div>
 
