--- a/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
@@ -31,22 +31,22 @@
             (matSortChange)="sortData($event)" class="table-widget">
 
             <ng-container
-                    *ngFor="let element of dataExplorerWidget.dataConfig.selectedColumns"
-                    [cdkColumnDef]="element.runtimeName">
+                    *ngFor="let element of dataExplorerWidget.visualizationConfig.selectedColumns"
+                    [cdkColumnDef]="element.fullDbName">
                 <div *ngIf="!isTimestamp(element)">
                     <th mat-header-cell mat-sort-header *matHeaderCellDef [ngStyle]="{background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
-                        <label class="column-header">{{element.runtimeName}}</label>
+                        <label class="column-header">{{element.fullDbName}}</label>
                     </th>
                     <td mat-cell *matCellDef="let row" style="text-align: left;">
-                        {{row[element.runtimeName]}}
+                        {{row[element.fullDbName]}}
                     </td>
                 </div>
                 <div *ngIf="isTimestamp(element)">
                     <th mat-header-cell mat-sort-header *matHeaderCellDef [ngStyle]="{background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
-                        <label class="column-header">{{element.runtimeName}}</label>
+                        <label class="column-header">{{element.fullDbName}}</label>
                     </th>
                     <td mat-cell *matCellDef="let row" style="text-align: left;">
-                        {{row[element.runtimeName]| date:'yyyy-MM-dd HH:mm:ss'}}
+                        {{row[element.fullDbName]| date:'yyyy-MM-dd HH:mm:ss'}}
                     </td>
                 </div>
             </ng-container>
