--- a/ui/src/app/data-explorer/components/widgets/utils/select-properties/select-properties.component.html
+++ b/ui/src/app/data-explorer/components/widgets/utils/select-properties/select-properties.component.html
@@ -18,9 +18,11 @@
 
 <mat-form-field fxFlex="100" color="accent">
     <mat-label>{{this.label}}</mat-label>
-    <mat-select [ngModel]="this.selectedProperties" (selectionChange)="triggerSelectedProperties($event.value)" [multiple]="multiple" [compareWith]="compare">
+    <mat-select [ngModel]="selectedProperties" (selectionChange)="triggerSelectedProperties($event.value)"
+                [multiple]="multiple" [compareWith]="compare">
         <mat-option *ngFor="let column of availableProperties" [value]="column" style="background-color: #FFFFFF">
-            {{column.runtimeName}}
+            <b>{{column.runtimeName}}</b>
+            {{'(' +(column.aggregation ? column.aggregation + ', ': '') + column.measure +')'}}
         </mat-option>
     </mat-select>
 </mat-form-field>
