--- a/ui/src/scss/sp/layout.scss
+++ b/ui/src/scss/sp/layout.scss
@@ -27,12 +27,24 @@
   padding: 5px;
 }
 
+.p-10 {
+  padding: 10px;
+}
+
 .pl-5 {
   padding-left: 5px;
 }
 
 .pl-10 {
   padding-left: 10px;
+}
+
+.pr-5 {
+  padding-right: 5px;
+}
+
+.pr-10 {
+  padding-right: 10px;
 }
 
 
@@ -133,4 +145,8 @@ img {
 }
 img {
   border: 0;
+}
+
+.mat-expansion-panel-body {
+  padding: 0 !important;
 }
