--- a/ui/src/app/configuration/datalake-configuration/datalake-configuration.component.html
+++ b/ui/src/app/configuration/datalake-configuration/datalake-configuration.component.html
@@ -26,7 +26,13 @@
         </div>
 
         <div fxFlex="100" class="sp-blue-border">
-            <table fxFlex="100" mat-table [dataSource]="dataSource" style="width: 100%;" matSort>
+            <table
+                    fxFlex="100"
+                    mat-table
+                    data-cy="datalake-settings"
+                    [dataSource]="dataSource"
+                    style="width: 100%;"
+                    matSort>
 
                 <ng-container matColumnDef="name">
                     <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
@@ -44,7 +50,10 @@
 
                 <ng-container matColumnDef="events">
                     <th mat-header-cell mat-sort-header *matHeaderCellDef># Events</th>
-                    <td mat-cell *matCellDef="let configurationEntry">
+                    <td
+                            mat-cell
+                            data-cy="datalake-number-of-events"
+                            *matCellDef="let configurationEntry">
                         {{configurationEntry.events | number}}
                     </td>
                 </ng-container>
@@ -59,7 +68,7 @@
                                             mat-icon-button
                                             matTooltip="Truncate all data from index"
                                             matTooltipPosition="above"
-                                            data-cy="truncate-datalake-index"
+                                            data-cy="datalake-truncate-btn"
                                             (click)="cleanDatalakeIndex(configurationEntry.name)">
                                         <i class="material-icons">local_fire_department</i>
                                     </button>
@@ -77,7 +86,7 @@
                                             mat-button
                                             mat-icon-button
                                             matTooltip="Remove index from database"
-                                            data-cy="delete-datalake-index"
+                                            data-cy="datalake-delete-btn"
                                             matTooltipPosition="above"
                                             [disabled]="!configurationEntry.remove"
                                             (click)="deleteDatalakeIndex(configurationEntry.name)">
